--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -58,8 +58,8 @@
           <form id="login-form" class="form" autocomplete="on">
             <h2>Heureux de vous revoir</h2>
             <label>
-              E-mail
-              <input type="email" name="email" required />
+              E-mail ou nom d'utilisateur
+              <input type="text" name="login" required />
             </label>
             <label>
               Mot de passe
@@ -143,6 +143,23 @@
           <ul id="reviews-list" class="reviews"></ul>
           <p id="feed-feedback" class="feedback" role="status"></p>
         </section>
+
+        <aside id="review-detail" class="review-detail hidden" aria-live="polite">
+          <div class="review-detail__header">
+            <div>
+              <h3 id="detail-title">Sélectionnez un avis</h3>
+              <p id="detail-meta" class="detail-meta">Explorez un avis pour afficher ses détails.</p>
+            </div>
+            <button id="close-detail-btn" type="button" class="icon-btn" aria-label="Fermer les détails">
+              ✕
+            </button>
+          </div>
+          <div id="detail-content" class="review-detail__body">
+            <p class="detail-placeholder">
+              Cliquez sur un avis pour afficher sa description, sa note, ses photos et les informations du lieu.
+            </p>
+          </div>
+        </aside>
       </section>
 
       <section id="add-review-view" class="view hidden" aria-label="Ajouter un avis">
